# doc/api.yml
@@ -641,7 +641,15 @@ paths:
     get:
       tags: [Authors]
       summary: Search authors by name
-      responses: { '200': { description: OK } }
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AuthorResponse'
     post:
       tags: [Authors]
       summary: Create author
