# src/main/java/com/onlydevs/bookstore/endpoint/rest/mapper/AuthorMapper.java
@@ -1,23 +1,30 @@
 package com.onlydevs.bookstore.endpoint.rest.mapper;
 
+import com.onlydevs.bookstore.endpoint.rest.model.AuthorResponse;
+import com.onlydevs.bookstore.endpoint.rest.model.CreateAuthorRequest;
 import com.onlydevs.bookstore.model.Author;
-import com.onlydevs.bookstore.model.dto.AuthorResponse;
-import com.onlydevs.bookstore.model.dto.CreateAuthorRequest;
+import java.util.List;
 import org.springframework.stereotype.Component;
 
 @Component
 public class AuthorMapper {
   public Author toDomain(CreateAuthorRequest request) {
-    return Author.builder().firstName(request.firstName()).lastName(request.lastName()).build();
+    return Author.builder()
+        .firstName(request.getFirstName())
+        .lastName(request.getLastName())
+        .build();
   }
 
   public AuthorResponse toRest(Author author) {
-    return AuthorResponse.builder()
-        .id(author.getId().toString())
+    return new AuthorResponse()
+        .id(author.getId())
         .firstName(author.getFirstName())
         .lastName(author.getLastName())
         .fullName(author.getFullName())
-        .createdAt(author.getCreatedAt())
-        .build();
+        .createdAt(author.getCreatedAt());
+  }
+
+  public List<AuthorResponse> toRest(List<Author> authors) {
+    return authors.stream().map(this::toRest).toList();
   }
 }
